--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "forever": "~0.10.0",
     "forever-monitor": "~1.1.0",
     "express": "~3.0.0rc4",
-    "phantom": "~0.3.5"
+    "phantom": "git://github.com/amir20/phantomjs-node.git#phantom-1.7-fix"
   }
 }
