moved phantomjs console.log debugging to use console.error so it makes it to the log instead of what is returned to the search bot; changed config.verbose to config.debug; added url to phantomjs exit log line; added success log line; added config.verbose for new logline default to true

--- a/bin/config.json
+++ b/bin/config.json
@@ -1,7 +1,7 @@
 {
-    "url": "http://client.apiengine.io/",
     "verbose": true,
-    "checkCompleteInterval": 300,
-    "checkCompleteTimeDiff": 1000,
+    "debug": false,
+    "checkCompleteInterval": 10,
+    "checkCompleteTimeDiff": 300,
     "checkCompleteTimeout": 10000
 }
