added minResponses check and minContentLength check; added Content-Length to verbose log

--- a/bin/config.json
+++ b/bin/config.json
@@ -1,6 +1,8 @@
 {
     "verbose": true,
     "debug": false,
+    "minResponses": 5,
+    "minContentLength": 4000,
     "checkCompleteInterval": 10,
     "checkCompleteTimeDiff": 300,
     "checkCompleteTimeout": 10000
